--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
                 }
             ],
             "preLaunchTask": "C/C++: g++ сборка активного файла",
-            "miDebuggerPath": "/usr/bin/gdb"
+            "miDebuggerPath": "c:\\mingw\\bin\\gdb.exe"
         }
     ]
 }
